# FITS_tools

./: .travis.yml  CHANGES  MANIFEST.in  README.rst  setup.cfg  setup.py
FITS_tools/: __init__.py  _astropy_init.py  cube_regrid.py  downsample.py  fits_overlap.py  hcongrid.py  header_to_box.py  header_tools.py  load_header.py  match_images.py  spectral_regrid.py  strip_headers.py
FITS_tools/tests/: test_cube_regrid.py  test_hcongrid.py
FITS_tools/tests/data/: hdr1.hdr  hdr2.hdr
docs/: conf.py  fits_tools.rst  index.rst
examples/: cube_regrid_example.py
licenses/: LICENSE.rst
