[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = FITS_tools
description = Tools for manipulating FITS images using primarily scipy & native python routines
long_description = See short description
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = True
github_project = keflavich/FITS_tools
